[package]
name = "swerve-sim-3d"
version = "0.1.0"
edition = "2024"

[patch.crates-io]
simba = { git = "https://github.com/aabizri/simba/", branch = "wip-nightly-1.95" }

[dependencies]
culit = "0.6.7"
rapier3d = { version = "0.32.0", features = ["simd-nightly"] }
whippyunits = "0.1.2"

[features]
default = ["debug_renderer"]
debug_renderer = []

[profile.release]
lto = "thin"
debug = true
