cargo-features = ["profile-rustflags"]
[workspace]
resolver = "3"
members = ["debug-window","ipc-types","swerve-sim-lib", "testing-app"]

[patch.crates-io]
simba = { git = "https://github.com/aabizri/simba/", branch = "wip-nightly-1.95" }

[profile.release]
# rustflags = ["-C target-cpu=x86-64-v3"]
lto = "thin"
debug = true

[profile.release-full]
inherits = "release"
opt-level = 3
debug = false
strip = true
# lto = true
codegen-units = 1
