cargo-features = ["profile-rustflags"]
[workspace]
resolver = "3"
members = ["debug-window", "ipc-types", "swerve-sim-lib", "testing-app"]

[profile.release]
# rustflags = ["-C target-cpu=x86-64-v3"]
lto = "thin"
debug = true

[patch.crates-io]
rapier3d = { path = "../../other/rapier/crates/rapier3d" }

[profile.release-full]
inherits = "release"
opt-level = 3
debug = false
strip = true
# lto = true
codegen-units = 1
