[package]
name = "debug-window"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
assert_approx_eq = "1.1.0"
bytemuck = { version = "1.25.0", features = ["derive"] }
cgmath = "0.18.0"
ipc-channel = "0.22.0"
log = "0.4.32"
pollster = "0.4.0"
wgpu = "29.0.3"
winit = "0.30.13"
env_logger = "0.11.10"
ipc-types = { path = "../ipc-types" }
