[package]
name = "swerve-sim-3d"
version = "0.1.0"
edition = "2024"

[dependencies]
assert_approx_eq = "1.1.0"
culit = "0.6.7"
rapier3d = { version = "0.32.0", features = ["simd-nightly", "debug-render"] }
sdl3 = { version = "0.18.0", features = ["build-from-source-static"] }
whippyunits = "0.1.2"

[features]
default = ["debug_renderer"]
debug_renderer = []
