[package]
name = "swerve-sim-3d"
version = "0.1.0"
edition = "2024"

[dependencies]
culit = "0.6.7"
ipc-channel = "0.22.0"
rapier3d = { version = "0.32.0", features = ["simd-nightly", "debug-render"] }
serde = "1.0.228"
whippyunits = "0.1.2"
ipc-types = { path = "../ipc-types" }
[features]
default = ["debug_renderer"]
debug_renderer = []
